--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,12 +19,12 @@ jobs:
       run: python -m pip install -e .
     - name: Build html
       run: |
-        sphinx-build -b html docs docs/_build/html
+        mkdocs build
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
         name: html-docs
-        path: docs/_build/html/
+        path: site
     - name: Deploy docs
       uses: peaceiris/actions-gh-pages@v3
       if: github.ref == 'refs/heads/main'
