--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs
+          
+      - name: Build MkDocs site
+        run: mkdocs build  
 
       - name: Build and deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
