--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs
+          pip install pymdown-extensions
+          pip install mkdocstrings
+          pip install mkdocstrings-python
           
       - name: Build MkDocs site
         run: mkdocs build  
