FIX: package not installed

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,6 +24,7 @@ jobs:
           pip install pymdown-extensions
           pip install mkdocstrings
           pip install mkdocstrings-python
+          pip install -e .
           
       - name: Build MkDocs site
         run: mkdocs build  
