--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,19 +30,17 @@ jobs:
         id: check-flag
         run: |
           echo "Commit Message: ${{ github.event.head_commit.message }}"
+          echo "TRIGGER_BUILD=false" >> $GITHUB_ENV
           if [[ "${{ github.event.head_commit.message }}" =~ \[build-docs\] ]]; then
-            echo "::set-output name=trigger::true"
-          else
-            echo "::set-output name=trigger::false"
+            echo "TRIGGER_BUILD=true" >> $GITHUB_ENV
           fi
-          echo "Trigger build: ${{ steps.check-flag.outputs.trigger }}"
-
+          
       - name: Build MkDocs site
-        if: steps.check-flag.outputs.trigger == 'true'
+        if: env.TRIGGER_BUILD == 'true'
         run: mkdocs build
         
       - name: Build and deploy to GitHub Pages
-        if: steps.check-flag.outputs.trigger == 'true'
+        if: env.TRIGGER_BUILD == 'true'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
