--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -16,15 +16,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.12'  
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install mkdocs
-          pip install pymdown-extensions
-          pip install mkdocstrings
-          pip install mkdocstrings-python
-          #pip install -e .
           
       - name: Check for Build Flag
         id: check-flag
@@ -34,6 +25,16 @@ jobs:
           if [[ "${{ github.event.head_commit.message }}" =~ \[build-docs\] ]]; then
             echo "TRIGGER_BUILD=true" >> $GITHUB_ENV
           fi
+          
+      - name: Install dependencies
+        if: env.TRIGGER_BUILD == 'true'
+        run: |
+          python -m pip install --upgrade pip
+          pip install mkdocs
+          pip install pymdown-extensions
+          pip install mkdocstrings
+          pip install mkdocstrings-python
+          pip install -e .
           
       - name: Build MkDocs site
         if: env.TRIGGER_BUILD == 'true'
