MAINT, TEST: pinned jax jaxlib version [build-docs]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-  'jax',
-  'jaxlib',
+  'jax==0.4.26',
+  'jaxlib==0.4.26',
   'diffrax',
   'matplotlib'
 ]
