--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,8 @@ extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+  # Add version information dynamically
+extra:
+  version: !!python/object/apply:os.getenv ["DOCS_VERSION"]
+  commit: !!python/object/apply:os.getenv ["GITHUB_SHA"]
