fix: footer (???) [build-docs]

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -71,6 +71,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          deploy_branch: gh-pages
+          publish_branch: gh-pages
           publish_dir: ./site
           destination_dir: ${{ github.ref_name }}
