--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: "GRANAD"
 
 theme:
   name: "readthedocs"
-  logo: docs/logo.png
+  logo: img/logo.png
   features:
     - content.code.copy
   custom_dir: docs/overrides  # <- This enables custom templates
